# teambacon

./: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  kvc2_lidar_alarm.cpp
Bacon_Lab7/kvc2_amcl_steering/: CMakeLists.txt  README.md  package.xml
Bacon_Lab7/kvc2_amcl_steering/launch/: bacon_lab7_1.launch  bacon_lab7_1.launch~  bacon_lab7_2 _b.launch~  bacon_lab7_2.launch~  bacon_lab7_2_a.launch  bacon_lab7_2_a.launch~  bacon_lab7_2_b.launch  bacon_lab7_3.launch
Bacon_Lab7/kvc2_amcl_steering/src/: glennan2_client.cpp
Bacon_Lab7/my_lin_steering/: ._package.xml  CMakeLists.txt  package.xml
Bacon_Lab7/my_lin_steering/src/: lin_steering_wrt_odom.cpp  odom_tf.h  odom_tf_fncs.cpp  steering_algorithm.h~
Bacon_Lab7/my_mobot/: CMakeLists.txt  CMakeLists.txt~  package.xml~
Bacon_Lab7/my_mobot/src/: my_mobot_lidar_alarm.cpp  my_mobot_lidar_detecting.cpp  my_mobot_pub_des_state.cpp  my_mobot_pub_des_state.h  (+5 more)
kvc2_path_service/: CMakeLists.txt  package.xml
src/: cbw36_ps7_lidar_alarm.cpp  cbw36_ps7_lin_steering_wrt_odom.cpp  cbw36_ps7_pub_des_state.cpp  cbw36_ps7_pub_des_state.h  cbw36_ps7_pub_des_state_main.cpp  cbw36_ps7_pub_des_state_path_client.cpp  cbw36_ps7_steering_algorithm.h  cbw36_ps7_traj_builder.cpp  cbw36_pub_des_state.cpp  cbw36_pub_des_state.h  cbw36_pub_des_state_main.cpp  cbw36_traj_builder.cpp  stdr_open_loop_commander.cpp
teambacon/: CMakeLists.txt  package.xml
teambacon/kvc2_path_service/: README.md  README.md~
teambacon/src/: README.md  bacon_lidar_alarm.cpp  bacon_path_service2.cpp  reactive_commander.cpp  stdr_open_loop_commander.cpp
(+3 files in other folders)
